clear test_file_screening

--- a/test_file_screening/filter_exp.ipynb
+++ b/test_file_screening/filter_exp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,33 +66,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Action Potential Initiation', 'Pattern Recognition', 'Activity Patterns', 'Dendritic Action Potentials', 'Bursting', 'Ion Channel Kinetics', 'Coincidence Detection', 'Temporal Pattern Generation', 'Oscillations', 'Synchronization', 'Spatio-temporal Activity Patterns', 'Parameter Fitting', 'Simplified Models', 'Active Dendrites', 'Influence of Dendritic Geometry', 'Detailed Neuronal Models', 'Tutorial/Teaching', 'Synaptic Plasticity', 'Short-term Synaptic Plasticity', 'Axonal Action Potentials', 'Long-term Synaptic Plasticity', 'Action Potentials', 'Therapeutics', 'Facilitation', 'Post-Tetanic Potentiation', 'Depression', 'Intrinsic plasticity', 'Invertebrate', 'Methods', 'Pathophysiology', 'Epilepsy', 'Multiple sclerosis', 'Heart disease', 'Signaling pathways', 'Rate-coding model neurons', 'Synaptic Integration', 'Electrotonus', \"Parkinson's\", 'Working memory', 'Learning', 'Reinforcement Learning', 'Unsupervised Learning', 'Attractor Neural Network', 'Winner-take-all', 'Action Selection/Decision Making', 'Extracellular Fields', 'STDP', 'Brugada', 'Long-QT', 'Sleep', 'Nociception', 'Stuttering', 'Delay', 'Place cell/field', 'Calcium dynamics', 'Timothy Syndrome', 'Aging/Alzheimer`s', 'Schizophrenia', 'Addiction', 'Complementary and alternative medicine', 'Perceptual Categories', 'Magnetoencephalography', 'Conduction failure', 'Connectivity matrix', 'Biofeedback', 'Reward-modulated STDP', 'Direction Selectivity', 'Deep brain stimulation', 'Spike Frequency Adaptation', 'Parameter sensitivity', 'Maintenance', 'Sodium pump', 'Depolarization block', 'Noise Sensitivity', 'Maximum entropy models', 'Locking, mixed mode', 'Laminar Connectivity', 'Development', 'Envelope synthesis', 'Information transfer', 'G-protein coupled', 'Rebound firing', 'Intermittent block', 'Phase Response Curves', 'Erythromelalgia', 'Magnetic stimulation', 'Brain Rhythms', 'Anoxic depolarization', 'Evoked LFP', 'Sensory processing', 'Phase interference', 'Cardiac pacemaking', 'Chloride regulation', 'Synaptic-input statistic', 'Conductance distributions', 'Bifurcation', 'Cellular volume dynamics', 'Homeostasis', 'Duration Selectivity', 'Boolean network', 'Apoptosis', 'Circadian Rhythms', 'unscented Kalman filter', 'Intracortical Microstimulation', 'Orientation selectivity', 'Drug binding', 'Reliability', 'Calcium waves', 'Posture and locomotion', 'Storage/recall', 'CREB', 'Recurrent Discharge', 'Potassium buffering', 'Contrast-gain control', 'Temperature', 'Color selectivity', 'Triggered activity', 'Neurogenesis', 'Gamma oscillations', 'Spreading depression', 'Motion Detection', 'Dendritic Bistability', 'Hebbian plasticity', 'Sensory coding', 'Spatial Navigation', 'Reaction-diffusion', 'Volume transmission', 'Synaptic noise', 'Ephaptic coupling', 'Beta oscillations', 'Reservoir Computing', 'Cytokine Signaling', 'Persistent activity', 'Pattern Separation', 'Motor control', 'Memory', 'Grid cell', 'Borderline Personality Disorder (BPD)', 'Membrane Properties', 'Neuromodulation', 'Feature selectivity', 'Multiscale', 'Electrical-chemical', 'Bipolar Disorder (BP)', 'Spindles', 'Pacemaking mechanism', 'Current Dipole', 'Stimulus selectivity', 'Hallucinations', 'Respiratory control', 'Early evolution', 'Spreading depolarization', 'Markov-type model', 'Stochastic simulation', 'Autism spectrum disorder', 'Temporal Coding', 'Major Depression Disease (MDD)', 'Synaptic Amplification', 'Synaptic Convergence', 'Alcohol Use Disorder', 'Brain Tumor', 'Conductances estimation', 'Neurotransmitter dynamics', 'Olfaction', 'Vision', 'Audition', 'Vestibular', 'Touch', 'Whisking', 'Disparity estimation', 'Top-down input', 'Theta oscillations', 'Double cable', \"Huntington's\", 'Kesten Process\\r\\n', 'Langevin process', 'Amblyopia', 'Spatial connectivity', 'Cardiac-related electrode motion', 'Sleep-Wake transition', 'Acute hepatic encephalopathy (AHE)', 'Binocular energy model/Stereopsis', 'Soma-dendrite cross-talk', 'Receptive field', 'Paranoia', 'COVID-19', 'Eligibility traces', 'Behavioral switching', 'Impedance', 'Gain-bandwidth product (GBWP)', 'Phenomenological inductance', 'Sequence learning', 'Two-port analysis of electrotonus', 'Voltage transfer ratio', 'Equivalent PI circuit', 'Excitability', 'Subthreshold signaling', 'Analog coding', 'Energy consumption', 'Negative feedback', 'Neurite growth', 'Neurite loss', 'Structural plasticity', 'Homeostatic plasticity', 'Balanced networks', 'Pain processing', 'Evolution', 'Electrodiffusion', 'Context integration', 'Dynamic extracellular concentrations', 'Ramping', 'Effective Optokinetic Response (OKR)', 'Eyeblink Conditioning (EBC)', 'Synaptic Tagging and Capture']\n"
+      "['celltypes', 'currents', 'genes', 'modelconcepts', 'models', 'modeltypes', 'papers', 'receptors', 'regions', 'simenvironments', 'transmitters']\n"
      ]
     }
    ],
    "source": [
-    "cat_url = \"/api/v1/modelconcepts/name\"\n",
+    "cat_url = \"/api/v1\"\n",
     "metadata_categories = api_request(cat_url, method = 'GET')\n",
     "print(metadata_categories)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Files: 100%|██████████| 17/17 [00:40<00:00,  2.39s/file]"
+      "Processing Files: 100%|██████████| 78/78 [04:21<00:00,  3.35s/file]"
      ]
     },
     {
@@ -121,7 +121,7 @@
     "\n",
     "filter_file_folder = '/Users/mengmengdu/Desktop/CodeAnalysis/samples/filtered_files'\n",
     "unfilter_file_folder = '/Users/mengmengdu/Desktop/CodeAnalysis/samples/unfiltered_files'\n",
-    "output_json_path = '/Users/mengmengdu/Desktop/CodeAnalysis/samples/celltype_filter_test.json'\n",
+    "output_json_path = '/Users/mengmengdu/Desktop/CodeAnalysis/evaluation/results/celltype_filter_test.json'\n",
     "\n",
     "client = OpenAI(api_key=api_key, organization=organization)\n",
     "\n",
@@ -129,14 +129,14 @@
     "\n",
     "filter_files = {entry: entry.split('_')[0] for entry in os.listdir(filter_file_folder) if entry.endswith('.txt')}\n",
     "\n",
-    "def process_file(file_folder, code, exact_file):\n",
+    "def process_file(file_folder, exact_file):\n",
     "    full_path = os.path.join(file_folder, exact_file)\n",
     "    with open(full_path, 'r', encoding='utf-8') as file:\n",
     "        file_content = file.read()\n",
-    "        file_content = file_content[:5000]  \n",
+    "        file_content = file_content[:5000]  #128,000 token\n",
     "\n",
     "    prompt = (\n",
-    "    f\"You are a neuroscience expert specializing in ion channel and current analysis. \"\n",
+    "    f\"You are a neuroscience expert specializing in cell types analysis. \"\n",
     "    f\"Given the following content:\\n\\n{file_content}\\n\\n\"\n",
     "    f\"Please identify the most relevant cell types from the following list. \"\n",
     "    f\"The list includes: ['Dentate gyrus granule GLU cell', 'Hippocampus CA1 pyramidal GLU cell', 'Hippocampus CA3 pyramidal GLU cell', \"\n",
@@ -247,12 +247,12 @@
     "\n",
     "    results[code] = {}\n",
     "\n",
-    "    results[code]['filter'] = process_file(filter_file_folder, code, filter_file)\n",
+    "    results[code]['filter'] = process_file(filter_file_folder, filter_file)\n",
     "\n",
     "    unfilter_file = f\"{code}.txt\"\n",
     "    unfilter_path = os.path.join(unfilter_file_folder, unfilter_file)\n",
     "    if os.path.exists(unfilter_path):\n",
-    "        results[code]['unfilter'] = process_file(unfilter_file_folder, code, unfilter_file)\n",
+    "        results[code]['unfilter'] = process_file(unfilter_file_folder, unfilter_file)\n",
     "    else:\n",
     "        results[code]['unfilter'] = None\n",
     "\n",
@@ -264,14 +264,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Files: 100%|██████████| 17/17 [00:40<00:00,  2.39s/file]"
+      "Processing Files: 100%|██████████| 78/78 [03:17<00:00,  2.54s/file]"
      ]
     },
     {
@@ -300,7 +300,7 @@
     "\n",
     "filter_file_folder = '/Users/mengmengdu/Desktop/CodeAnalysis/samples/filtered_files'\n",
     "unfilter_file_folder = '/Users/mengmengdu/Desktop/CodeAnalysis/samples/unfiltered_files'\n",
-    "output_json_path = '/Users/mengmengdu/Desktop/CodeAnalysis/samples/modelconcepts_filter_test.json'\n",
+    "output_json_path = '/Users/mengmengdu/Desktop/CodeAnalysis/evaluation/results/modelconcepts_filter_test.json'\n",
     "\n",
     "client = OpenAI(api_key=api_key, organization=organization)\n",
     "\n",
@@ -315,7 +315,7 @@
     "        file_content = file_content[:5000]  \n",
     "    \n",
     "    prompt = (\n",
-    "        f\"You are a neuroscience expert specializing in various neurophysiological processes. \"\n",
+    "        f\"You are a neuroscience expert specializing in model concepts analysis. \"\n",
     "        f\"Given the following content:\\n\\n{file_content}\\n\\n\"\n",
     "        f\"Please identify the most relevant model concepts from the following list. \"\n",
     "        f\"The list includes: ['Action Potential Initiation', 'Pattern Recognition', 'Activity Patterns', 'Dendritic Action Potentials', \"\n",
