保存当前更改

--- a/test_file_screening/filter_exp.ipynb
+++ b/test_file_screening/filter_exp.ipynb
@@ -85,21 +85,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Files: 100%|██████████| 78/78 [04:21<00:00,  3.35s/file]"
+      "Processing Files: 100%|██████████| 20/20 [00:29<00:00,  1.48s/file]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Results saved to /Users/mengmengdu/Desktop/CodeAnalysis/samples/celltype_filter_test.json\n"
+      "Results saved to /Users/mengmengdu/Desktop/CodeAnalysis/evaluation/results/celltype_filter_header.json\n"
      ]
     },
     {
@@ -119,15 +119,15 @@
     "api_key = os.getenv('API_KEY')\n",
     "organization = os.getenv('ORGANIZATION')\n",
     "\n",
-    "filter_file_folder = '/Users/mengmengdu/Desktop/CodeAnalysis/samples/filtered_files'\n",
-    "unfilter_file_folder = '/Users/mengmengdu/Desktop/CodeAnalysis/samples/unfiltered_files'\n",
-    "output_json_path = '/Users/mengmengdu/Desktop/CodeAnalysis/evaluation/results/celltype_filter_test.json'\n",
+    "filter_file_folder = '/Users/mengmengdu/Desktop/CodeAnalysis/data/concat_header'\n",
+    "#unfilter_file_folder = '/Users/mengmengdu/Desktop/CodeAnalysis/samples/unfiltered_files'\n",
+    "output_json_path = '/Users/mengmengdu/Desktop/CodeAnalysis/evaluation/results/celltype_filter_header.json'\n",
     "\n",
     "client = OpenAI(api_key=api_key, organization=organization)\n",
     "\n",
     "results = {}\n",
     "\n",
-    "filter_files = {entry: entry.split('_')[0] for entry in os.listdir(filter_file_folder) if entry.endswith('.txt')}\n",
+    "filter_files = {entry: entry.split('_')[0] for entry in os.listdir(filter_file_folder)}\n",
     "\n",
     "def process_file(file_folder, exact_file):\n",
     "    full_path = os.path.join(file_folder, exact_file)\n",
@@ -249,12 +249,12 @@
     "\n",
     "    results[code]['filter'] = process_file(filter_file_folder, filter_file)\n",
     "\n",
-    "    unfilter_file = f\"{code}.txt\"\n",
-    "    unfilter_path = os.path.join(unfilter_file_folder, unfilter_file)\n",
-    "    if os.path.exists(unfilter_path):\n",
-    "        results[code]['unfilter'] = process_file(unfilter_file_folder, unfilter_file)\n",
-    "    else:\n",
-    "        results[code]['unfilter'] = None\n",
+    "    # unfilter_file = f\"{code}.txt\"\n",
+    "    # unfilter_path = os.path.join(unfilter_file_folder, unfilter_file)\n",
+    "    # if os.path.exists(unfilter_path):\n",
+    "    #     results[code]['unfilter'] = process_file(unfilter_file_folder, unfilter_file)\n",
+    "    # else:\n",
+    "    #     results[code]['unfilter'] = None\n",
     "\n",
     "with open(output_json_path, 'w', encoding='utf-8') as json_file:\n",
     "    json.dump(results, json_file, ensure_ascii=False, indent=4)\n",
@@ -264,21 +264,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Files: 100%|██████████| 78/78 [03:17<00:00,  2.54s/file]"
+      "Processing Files: 100%|██████████| 20/20 [00:25<00:00,  1.28s/file]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Results saved to /Users/mengmengdu/Desktop/CodeAnalysis/samples/modelconcepts_filter_test.json\n"
+      "Results saved to /Users/mengmengdu/Desktop/CodeAnalysis/evaluation/results/modelconcepts_filter_header.json\n"
      ]
     },
     {
@@ -298,15 +298,15 @@
     "api_key = os.getenv('API_KEY')\n",
     "organization = os.getenv('ORGANIZATION')\n",
     "\n",
-    "filter_file_folder = '/Users/mengmengdu/Desktop/CodeAnalysis/samples/filtered_files'\n",
-    "unfilter_file_folder = '/Users/mengmengdu/Desktop/CodeAnalysis/samples/unfiltered_files'\n",
-    "output_json_path = '/Users/mengmengdu/Desktop/CodeAnalysis/evaluation/results/modelconcepts_filter_test.json'\n",
+    "filter_file_folder = '/Users/mengmengdu/Desktop/CodeAnalysis/data/concat_header'\n",
+    "#unfilter_file_folder = '/Users/mengmengdu/Desktop/CodeAnalysis/samples/unfiltered_files'\n",
+    "output_json_path = '/Users/mengmengdu/Desktop/CodeAnalysis/evaluation/results/modelconcepts_filter_header.json'\n",
     "\n",
     "client = OpenAI(api_key=api_key, organization=organization)\n",
     "\n",
     "results = {}\n",
     "\n",
-    "filter_files = {entry: entry.split('_')[0] for entry in os.listdir(filter_file_folder) if entry.endswith('.txt')}\n",
+    "filter_files = {entry: entry.split('_')[0] for entry in os.listdir(filter_file_folder)}\n",
     "\n",
     "def process_file(file_folder, code, exact_file):\n",
     "    full_path = os.path.join(file_folder, exact_file)\n",
@@ -377,12 +377,12 @@
     "\n",
     "    results[code]['filter'] = process_file(filter_file_folder, code, filter_file)\n",
     "\n",
-    "    unfilter_file = f\"{code}.txt\"\n",
-    "    unfilter_path = os.path.join(unfilter_file_folder, unfilter_file)\n",
-    "    if os.path.exists(unfilter_path):\n",
-    "        results[code]['unfilter'] = process_file(unfilter_file_folder, code, unfilter_file)\n",
-    "    else:\n",
-    "        results[code]['unfilter'] = None\n",
+    "    # unfilter_file = f\"{code}.txt\"\n",
+    "    # unfilter_path = os.path.join(unfilter_file_folder, unfilter_file)\n",
+    "    # if os.path.exists(unfilter_path):\n",
+    "    #     results[code]['unfilter'] = process_file(unfilter_file_folder, code, unfilter_file)\n",
+    "    # else:\n",
+    "    #     results[code]['unfilter'] = None\n",
     "\n",
     "with open(output_json_path, 'w', encoding='utf-8') as json_file:\n",
     "    json.dump(results, json_file, ensure_ascii=False, indent=4)\n",
